# claude-block-checker

./: .gitignore  Cargo.toml  LICENSE  README.md  USAGE.md  install.sh
src/: blocks.rs  main.rs  models.rs  parser.rs
